@@ -6,10 +6,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import com.inditex.rrhh.icmclcwb.dto.ProgramacionDTO;
+import com.inditex.rrhh.icmclcwb.dto.TipoAmbitoDTO;
 import com.inditex.rrhh.icmclcwb.model.primary.programacion.entity.Programacion;
 
 import org.junit.jupiter.api.Test;
@@ -28,11 +28,16 @@ public class ProgramacionMapperTest {
   public void programacionDtoToProgramacionTest() {
     final ProgramacionMapper INSTANCE = Mappers.getMapper(ProgramacionMapper.class);
 
+    final TipoAmbitoDTO tipoAmbitoDTO = new TipoAmbitoDTO();
+    tipoAmbitoDTO.setId(1L);
     final ProgramacionDTO dto = new ProgramacionDTO();
     dto.setId(1L);
     dto.setFechaHoraCreacion(OffsetDateTime.MAX);
     dto.setFechaHoraSiguienteEjecucion(OffsetDateTime.MAX);
     dto.setHoraProgramacion(OffsetDateTime.MAX);
+    dto.programacionHuso("Test");
+    dto.activo(true);
+    dto.tipoAmbito(tipoAmbitoDTO);
     final Programacion target = INSTANCE.programacionDtoToProgramacion(dto);
     assertThat(dto.getId()).isEqualTo(target.getId());
   }
@@ -41,12 +46,17 @@ public class ProgramacionMapperTest {
   public void programacionDtoToProgramacionListTest() {
     final ProgramacionMapper INSTANCE = Mappers.getMapper(ProgramacionMapper.class);
 
+    final TipoAmbitoDTO tipoAmbitoDTO = new TipoAmbitoDTO();
+    tipoAmbitoDTO.setId(1L);
     final ProgramacionDTO dto = new ProgramacionDTO();
     dto.setId(1L);
     dto.setFechaHoraCreacion(OffsetDateTime.MAX);
     dto.setFechaHoraSiguienteEjecucion(OffsetDateTime.MAX);
     dto.setHoraProgramacion(OffsetDateTime.MAX);
-    final List<Programacion> target = INSTANCE.programacionDtoToProgramacion(Arrays.asList(dto));
+    dto.programacionHuso("Test");
+    dto.activo(true);
+    dto.tipoAmbito(tipoAmbitoDTO);
+    final List<Programacion> target = INSTANCE.programacionDtoToProgramacion(List.of(dto));
     assertThat(dto.getId()).isEqualTo(target.get(0).getId());
   }
 
@@ -72,7 +82,7 @@ public class ProgramacionMapperTest {
     programacion.setFechaHoraCreacion(LocalDateTime.MAX);
     programacion.setFechaHoraSiguienteEjecucion(LocalDateTime.MAX);
     programacion.setHoraProgramacion(LocalTime.MAX);
-    final List<ProgramacionDTO> target = INSTANCE.programacionToProgramacionDto(Arrays.asList(programacion));
+    final List<ProgramacionDTO> target = INSTANCE.programacionToProgramacionDto(List.of(programacion));
     assertThat(programacion.getId()).isEqualTo(target.get(0).getId());
   }
 
